@@ -1,3 +1,7 @@
+2010-06-19 Homer Xing <homer.xing@gmail.com>
+
+    * Improve clean up pane. Reduce space cost.
+
 2010-06-19 MA Yue <velly.empire@gmail.com>
 
     * Add a lot of applications icons
